--- a/MySimpleTweets/app/src/main/res/menu/activity_main.xml
+++ b/MySimpleTweets/app/src/main/res/menu/activity_main.xml
@@ -7,6 +7,6 @@
         android:visible="true"
         android:orderInCategory="100"
         app:showAsAction="always"
-        android:actionLayout="@layout/action_view_progress"
+        app:actionLayout="@layout/action_view_progress"
         />
 </menu>
